--- a/app/src/main/res/layout/activity_sign_up_instructor.xml
+++ b/app/src/main/res/layout/activity_sign_up_instructor.xml
@@ -52,6 +52,14 @@
             android:layout_height="wrap_content" />
 
         <EditText
+            android:layout_margin="15dp"
+            android:inputType="phone"
+            android:hint="please enter your mobile number"
+            android:id="@+id/editTextNumberInstructor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <EditText
             android:id="@+id/editTextFirstName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -115,7 +123,12 @@
             android:id="@+id/yearsExperience"
             android:inputType="number"
             android:hint="Select your years of experience"/>
-
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/lessonsPrice"
+            android:inputType="number"
+            android:hint="Select the lesson's price"/>
 
 
         <TextView
