--- a/app/src/main/res/layout/activity_sign_up_instructor.xml
+++ b/app/src/main/res/layout/activity_sign_up_instructor.xml
@@ -35,6 +35,13 @@
             android:layout_height="wrap_content" />
 
 
+        <Button
+            android:layout_margin="15dp"
+            android:id="@+id/buttonContinueToLocation"
+            android:text="Please Enter Location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <EditText
             android:layout_margin="15dp"
             android:inputType="textEmailAddress"
@@ -157,10 +164,12 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
+
+
         <Button
             android:layout_margin="15dp"
-            android:id="@+id/buttonContinueToLocation"
-            android:text="Continue"
+            android:id="@+id/buttonRegister"
+            android:text="Sign Up"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
