--- a/app/src/main/res/layout/activity_sign_up_instructor.xml
+++ b/app/src/main/res/layout/activity_sign_up_instructor.xml
@@ -125,10 +125,11 @@
 
 
 
-        <Spinner
-            android:id="@+id/specialty"
+        <com.example.tcc.iteach.MultiSelectionSpinner
+            android:id="@+id/input1"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="40dp"
+            android:layout_margin="2dp" />
 
         <EditText
             android:layout_width="match_parent"
@@ -164,7 +165,15 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
 
-
+        <TextView
+            android:text="Please select your preferred teaching method"
+            android:id="@+id/textViewMethod"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:id="@+id/method"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
 
         <Button
             android:layout_margin="15dp"
