--- a/app/src/main/res/layout/activity_sign_up_student.xml
+++ b/app/src/main/res/layout/activity_sign_up_student.xml
@@ -36,6 +36,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+        <Button
+            android:layout_margin="15dp"
+            android:id="@+id/buttonContinueToLocation2"
+            android:text="Please Enter Location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
 
     <EditText
         android:layout_margin="15dp"
@@ -109,18 +116,16 @@
 
 
 
-
-
-
-        <Spinner
-            android:id="@+id/subjects"
+        <com.example.tcc.iteach.MultiSelectionSpinner
+            android:id="@+id/input2"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="40dp"
+            android:layout_margin="2dp" />
 
         <Button
             android:layout_margin="15dp"
-            android:id="@+id/buttonContinueToLocation2"
-            android:text="Continue"
+            android:id="@+id/buttonRegister2"
+            android:text="Register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
