--- a/app/src/main/res/layout/activity_edit_spots.xml
+++ b/app/src/main/res/layout/activity_edit_spots.xml
@@ -26,6 +26,16 @@
                 />
 
             <TextView
+                android:id="@+id/textViewSelectedDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Date"
+                android:background="@color/colorPrimary"
+                android:textColor="@android:color/white"
+                android:layout_gravity="center_horizontal"
+                />
+
+            <TextView
                 android:id="@+id/textViewDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -58,6 +68,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
             </LinearLayout>
 
             <LinearLayout
