--- a/app/src/main/res/layout/activity_edit_spots.xml
+++ b/app/src/main/res/layout/activity_edit_spots.xml
@@ -102,6 +102,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
 
@@ -131,6 +138,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
 
@@ -160,6 +174,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
 
@@ -188,6 +209,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
 
@@ -216,6 +244,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
 
@@ -244,6 +279,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -271,6 +313,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -298,6 +347,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -325,6 +381,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber15"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -352,6 +415,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -379,6 +449,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber17"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -406,6 +483,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber18"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -433,6 +517,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber19"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -460,6 +551,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -487,6 +585,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber21"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -514,6 +619,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber22"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
             <LinearLayout
@@ -541,6 +653,13 @@
                     android:layout_height="wrap_content"
                     android:text="Group"
                     android:layout_marginVertical="10dp"/>
+                <TextView
+                    android:id="@+id/textViewNumber23"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:textSize="20sp"
+                    android:layout_margin="10dp"/>
 
             </LinearLayout>
         </LinearLayout>
