--- a/app/src/main/res/layout/activity_edit_spots.xml
+++ b/app/src/main/res/layout/activity_edit_spots.xml
@@ -30,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Date"
+                android:textSize="30sp"
                 android:background="@color/colorPrimary"
                 android:textColor="@android:color/white"
                 android:layout_gravity="center_horizontal"
