--- a/app/src/main/res/layout/content_schedule.xml
+++ b/app/src/main/res/layout/content_schedule.xml
@@ -46,6 +46,13 @@
                 android:text="@string/edit_spots"
                 android:layout_gravity="center"
                 android:layout_marginVertical="20dp"/>
+            <ListView
+                android:layout_marginTop="30dp"
+                android:id="@+id/listViewSchedule"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </ListView>
         </LinearLayout>
+
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
