--- a/app/src/main/res/layout/content_schedule.xml
+++ b/app/src/main/res/layout/content_schedule.xml
@@ -48,9 +48,10 @@
                 android:layout_marginVertical="20dp"/>
             <ListView
                 android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp"
                 android:id="@+id/listViewSchedule"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="280dp">
             </ListView>
         </LinearLayout>
 
