--- a/app/src/main/res/layout/spot_info.xml
+++ b/app/src/main/res/layout/spot_info.xml
@@ -8,13 +8,14 @@
         android:orientation="vertical">
 
 
-
-
     <TextView
         android:id="@+id/listViewSpotInfoTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"/>
+        android:textSize="25sp"
+        android:drawableBottom="@color/colorPrimary"
+        android:paddingBottom="15dp"
+        />
 
 
     </LinearLayout>
