--- a/app/src/main/res/layout/activity_search_for_instructor.xml
+++ b/app/src/main/res/layout/activity_search_for_instructor.xml
@@ -4,137 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".SearchForInstructorActivity">
+
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/TextViewSearch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="Search by name"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-            <EditText
-                android:id="@+id/editTextName"
-                android:layout_marginTop="30dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-
-                android:hint="Name"
-                android:inputType="text" />
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:fillViewport="true">
-
-                <ListView
-                    android:id="@+id/list1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"></ListView>
-            </ScrollView>
-
-
 
             <Button
-                android:id="@+id/advancedSearch"
-                android:layout_width="354dp"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:text="Advanced Search"
-                android:textColor="@android:color/white"
+                android:id="@+id/detectLocation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:layout_marginBottom="30dp"
+                android:text="Choose Location"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent" />
             <Button
                 android:id="@+id/location"
-                android:layout_width="354dp"
-                android:layout_marginTop="30dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
 
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:text="Location"
-                android:textColor="@android:color/white"
+                android:layout_marginBottom="30dp"
+                android:text="Search by Location"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent" />
 
-            <TextView
-                android:id="@+id/textType"
-                android:layout_marginTop="30dp"
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Gender:"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
+                android:layout_height="wrap_content">
 
-            <RadioGroup
-                android:id="@+id/radioType"
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-
-                <RadioButton
-                    android:id="@+id/radioMale"
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:id="@+id/editTextName"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:text="Male"
-                    android:checked="true" />
+                    android:layout_marginBottom="30dp"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/rounded"
+                    android:hint="Search By Name"
+                    android:inputType="text" />
 
-                <RadioButton
-                    android:id="@+id/radioFemale"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Female" />
+                <ImageButton
+                    android:id="@+id/button1"
+                    android:layout_width="47dp"
+                    android:layout_height="78dp"
+                    android:background="@drawable/filter" />
+
+            </LinearLayout>
 
 
-            </RadioGroup>
-
-
-            <EditText
-                android:id="@+id/editTextPrice"
-                android:layout_marginTop="30dp"
+            <ListView
+                android:id="@+id/list1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:hint="Price less than"
-                android:inputType="number" />
-            <TextView
-                android:id="@+id/textSubject"
-                android:layout_marginTop="30dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Subject:"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="bold" />
-            <Spinner
-                android:id="@+id/subject"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                />
+                android:layout_height="match_parent"></ListView>
 
 
-            <Button
-                android:id="@+id/search"
-                android:layout_width="354dp"
-                android:layout_marginTop="30dp"
-
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:text="Search"
-                android:textColor="@android:color/white"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent" />
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
