--- a/app/src/main/res/layout/content_blackboard2.xml
+++ b/app/src/main/res/layout/content_blackboard2.xml
@@ -7,6 +7,45 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".blackboard2"
     tools:showIn="@layout/app_bar_student_main">
+    <Button
+        android:id="@+id/askButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="13dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="50dp"
+        android:text="ask" />
 
+    <Button
+        android:id="@+id/myQuestionsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/askButton"
+        android:layout_centerHorizontal="true"
+        android:text="my questions" />
+
+    <Button
+        android:id="@+id/filters"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/askButton"
+        android:layout_marginEnd="16dp"
+        android:text="filters"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/allQuestionList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="85dp"
+        android:layout_alignParentLeft="true"
+        android:scrollbars="vertical"/>
 
 </RelativeLayout>
