--- a/app/src/main/res/layout/content_student_main.xml
+++ b/app/src/main/res/layout/content_student_main.xml
@@ -38,5 +38,10 @@
         app:texts="@array/text"
         android:textAlignment="center"
         android:layout_below="@+id/top3textView"/>
+    <Button
+        android:id="@+id/findInstructor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Find Instructor"/>
 
 </RelativeLayout>
