--- a/app/src/main/res/layout/content_student_main.xml
+++ b/app/src/main/res/layout/content_student_main.xml
@@ -42,6 +42,7 @@
         android:id="@+id/findInstructor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Find Instructor"/>
+        android:text="Find Instructor"
+        android:layout_below="@+id/top3text"/>
 
 </RelativeLayout>
