--- a/app/src/main/res/layout/content_student_main.xml
+++ b/app/src/main/res/layout/content_student_main.xml
@@ -43,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Find Instructor"
-        android:layout_below="@+id/top3text"/>
+        android:layout_below="@+id/top3text"
+        android:gravity="center"/>
 
 </RelativeLayout>
