--- a/app/src/main/res/layout/content_notifications.xml
+++ b/app/src/main/res/layout/content_notifications.xml
@@ -7,6 +7,10 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".notifications"
     tools:showIn="@layout/app_bar_instructor_main">
-
+    <ListView
+        android:id="@+id/list1"
+        android:layout_marginTop="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"></ListView>
 
 </RelativeLayout>
