reservations for students done

--- a/app/src/main/res/layout/content_instructor_main.xml
+++ b/app/src/main/res/layout/content_instructor_main.xml
@@ -11,7 +11,7 @@
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPagerQuote"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="35dp"
         android:layout_width="match_parent"
         android:layout_height="260dp">
     </android.support.v4.view.ViewPager>
@@ -38,5 +38,13 @@
         app:texts="@array/text"
         android:textAlignment="center"
         android:layout_below="@+id/top3textView"/>
+
+    <Button
+        android:id="@+id/findInstructor2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Find Instructor"
+        android:layout_below="@+id/top3text"
+        android:gravity="center"/>
 
 </RelativeLayout>
