--- a/app/src/main/res/menu/activity_instructor_main_drawer.xml
+++ b/app/src/main/res/menu/activity_instructor_main_drawer.xml
@@ -30,8 +30,8 @@
             android:title="@string/settings" />
 
     <item
-        android:id="@+id/nav_signOut"
-        android:icon="@drawable/signOut"
-        android:title="@string/signOut" />
+        android:id="@+id/nav_signout"
+        android:icon="@drawable/signout"
+        android:title="@string/signout" />
 
 </menu>
