--- a/app/src/main/res/menu/activity_student_main_drawer.xml
+++ b/app/src/main/res/menu/activity_student_main_drawer.xml
@@ -25,8 +25,8 @@
         android:icon="@drawable/ic_menu_manage"
         android:title="@string/settings" />
     <item
-        android:id="@+id/nav_signOut"
-        android:icon="@drawable/signOut"
-        android:title="@string/signOut" />
+        android:id="@+id/nav_signout"
+        android:icon="@drawable/signout"
+        android:title="@string/signout" />
 
 </menu>
