checks add,arabic,location in view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@ android:orientation="vertical"
            android:id="@+id/textview2"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
-           android:text="User Login"
+           android:text="تسجيل الدخول"
 
 
            />
@@ -33,7 +33,7 @@ android:orientation="vertical"
        <EditText
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
-           android:hint="please enter your email"
+           android:hint="فضلاً أدخل الايميل"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
@@ -41,7 +41,7 @@ android:orientation="vertical"
        <EditText
            android:layout_margin="15dp"
            android:inputType="textPassword"
-           android:hint="please enter your password"
+           android:hint="فضلاً أدخل كلمة المرور"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
@@ -50,13 +50,13 @@ android:orientation="vertical"
        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonSignin"
-           android:text="Login"
+           android:text="تسجيل الدخول"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
 
        <TextView
            android:textAlignment="center"
-           android:text="Don't have an account? Sign up here"
+           android:text="ليس لديك حساب؟؟ اضغط هنا "
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
