--- a/app/src/main/res/layout/activity_view_instructor_profile.xml
+++ b/app/src/main/res/layout/activity_view_instructor_profile.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".ViewInstructorProfile">
 
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,11 +20,20 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/distance"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
                 android:id="@+id/textViewInstructorProfile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceLarge" />
+
 
 
             <ListView
