--- a/app/src/main/res/menu/activity_student_main_drawer.xml
+++ b/app/src/main/res/menu/activity_student_main_drawer.xml
@@ -26,7 +26,7 @@
         android:title="@string/settings" />
     <item
         android:id="@+id/nav_signOut"
-        android:icon="@drawable/signOut"
+        android:icon="@drawable/signout"
         android:title="@string/signOut" />
 
 </menu>
