--- a/app/src/main/res/menu/activity_instructor_main_drawer.xml
+++ b/app/src/main/res/menu/activity_instructor_main_drawer.xml
@@ -31,7 +31,7 @@
 
     <item
         android:id="@+id/nav_signOut"
-        android:icon="@drawable/signOut"
+        android:icon="@drawable/signout"
         android:title="@string/signOut" />
 
 </menu>
